[SELC-6086] Feat: Added mobilePhone in updateUser API (#497)